--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,35 +3,47 @@
 }
 
 body {
-  background: #8dc6dd;
   font-family: "Cabin", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  padding: 40px;
+  color: #000;
+  opacity: .9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .info {
-  font-size: 40px;
-  color: #fff;
-  width: 400px;
-  margin: 300px auto;
+  max-width: 500px;
+  line-height: 1.5em;
+  font-size: 150%;
+
 }
 
 h1 {
-  font-size: 50px;
-  margin-bottom: 0px;
-}
-
-h3 {
-  font-size: 14px;
+  font-size: 180%;
 }
 
 a {
-  color: #fff;
+  color: #000;
+  opacity: .9;
 }
 
-.footer {
-  font-size: 14px;
-  color: #fff;
-  opacity: .8;
-  position: absolute;
-  bottom: 3px;
-  right: 5px;
+@media only screen and (max-width: 700px) {
+  .background {
+    align-items: flex-start;
+  }
+  .info {
+    font-size: 110%;
+  }
 }
