--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Cabin", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 .background {
@@ -24,10 +24,15 @@ body {
 }
 
 .info {
-  max-width: 500px;
+  max-width: 900px;
   line-height: 1.5em;
   font-size: 150%;
 
+}
+
+.description {
+  font-size: 75%;
+  margin-top: 1em;
 }
 
 h1 {
@@ -36,14 +41,30 @@ h1 {
 
 a {
   color: #000;
-  opacity: .9;
+  text-decoration: none;
+  background:
+    linear-gradient(#000 100%, #000 90%),
+    linear-gradient(90deg, #7beefd 0%, #7ffabe 100%)
+  ;
+  background-size: 100% 2px, 0 2px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 500ms;
 }
 
-@media only screen and (max-width: 700px) {
+a:hover {
+  background-size: 0 2px, 100% 2px;
+}
+
+
+@media only screen and (max-width: 800px) {
   .background {
     align-items: flex-start;
   }
   .info {
     font-size: 110%;
+  }
+  .description {
+    font-size: 100%;
   }
 }
