--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,7 +3,36 @@
 }
 
 body {
-  font-family: "Cabin", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  padding: 40px;
+  color: #000;
+  opacity: .9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.info {
+  max-width: 900px;
+  line-height: 1.5em;
+  font-size: 150%;
+
+}
+
+.description {
+  font-size: 75%;
+  margin-top: 1em;
 }
 
 .background {
@@ -36,14 +65,30 @@ h1 {
 
 a {
   color: #000;
-  opacity: .9;
+  text-decoration: none;
+  background:
+    linear-gradient(#000 100%, #000 90%),
+    linear-gradient(90deg, #7beefd 0%, #7ffabe 100%)
+  ;
+  background-size: 100% 2px, 0 2px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 500ms;
 }
 
-@media only screen and (max-width: 700px) {
+a:hover {
+  background-size: 0 2px, 100% 2px;
+}
+
+
+@media only screen and (max-width: 800px) {
   .background {
     align-items: flex-start;
   }
   .info {
     font-size: 110%;
+  }
+  .description {
+    font-size: 100%;
   }
 }
