--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,6 +4,8 @@
 
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  background: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-attachment: fixed;
 }
 
 .background {
@@ -12,9 +14,6 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: #0093E9;
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-  padding: 40px;
   color: #000;
   opacity: .9;
   display: flex;
@@ -27,7 +26,7 @@ body {
   max-width: 900px;
   line-height: 1.5em;
   font-size: 150%;
-
+  padding: 40px;
 }
 
 .description {
@@ -56,7 +55,6 @@ a:hover {
   background-size: 0 2px, 100% 2px;
 }
 
-
 @media only screen and (max-width: 800px) {
   .background {
     align-items: flex-start;
@@ -66,5 +64,11 @@ a:hover {
   }
   .description {
     font-size: 100%;
+  }
+}
+
+@media only screen and (max-height: 900px) {
+  .background {
+    align-items: flex-start;
   }
 }
